# solosh

./: AUTHORS  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
runcmd/: Makefile  Makefile.am  Makefile.in  Makefile_simple  README  config.mk  iotest.c  runcmd.c  runcmd.h  simpletest.c  test.c  test_io.c  test_onexit.c
shell/: Makefile  Makefile.am  Makefile.in  solosh.c  solosh.d  solosh_errors.h  solosh_parser.c  solosh_parser.h
solosh/: .solosh_parser.c.swp  .solosh_parser.h.swp  solosh.c  solosh_parser.c  solosh_parser.d  solosh_parser.h
